@@ -6,9 +6,12 @@ The tt(zsh/datetime) module makes available one builtin command:
 startitem()
 findex(strftime)
 cindex(date string, printing)
-item(tt(strftime) var(format) var(epochtime) )(
+item(tt(strftime) [ tt(-s) var(scalar) ] var(format) var(epochtime) )(
 Output the date denoted by var(epochtime) in the var(format)
 specified.
+
+If tt(-s) var(scalar) is given, assign the date to var(scalar) instead
+of printing it.
 )
 enditem()
 
